--- a/examples/BUILD
+++ b/examples/BUILD
@@ -1,13 +1,20 @@
 load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
 
 py_runtime(
+    name = "py2",
+    interpreter = "py.sh",
+    python_version = "PY2",
+)
+
+py_runtime(
     name = "py3",
-    interpreter = "py3.sh",
+    interpreter = "py.sh",
     python_version = "PY3",
 )
 
 py_runtime_pair(
     name = "py_runtime_pair",
+    py2_runtime = ":py2",
     py3_runtime = ":py3",
 )
 
