--- a/examples/WORKSPACE
+++ b/examples/WORKSPACE
@@ -53,7 +53,7 @@ pip_import(
     name = "piptool_deps_tests_3",
     timeout = 1200,
     compile = False,
-    python_interpreter = "python3.8",
+    python_interpreter = "python",
     requirements = "//tests:requirements.txt",
 )
 
@@ -76,7 +76,7 @@ load("@com_github_ali5h_rules_pip//third_party/cpython:configure.bzl", "python_c
 python_configure(
     name = "cpython",
     devel = True,
-    interpreter = "python3.8",
+    interpreter = "python",
 )
 
 # added at the end to not override rules_docker
